Fixed modal background z-index not overlapping nav bar

--- a/theme/static/css/hydroshare_core.css
+++ b/theme/static/css/hydroshare_core.css
@@ -4372,5 +4372,9 @@ div#fb-file-operations-controls {
 .ui-dialog {
 	-webkit-box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5);
 	box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5);
+	z-index: 1032 !important;
+}
+
+.ui-widget-overlay {
 	z-index: 1031 !important;
 }
